# invoice-automation

./: .dockerignore  .env.example  .gitignore  CURRENT-MILESTONE.txt  Dockerfile  LICENSE  MILESTONES.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: security.py
backend/app/models/: __init__.py  approval.py  base.py  client.py  invoice.py  user.py
backend/app/routers/: approvals.py  auth.py  clients.py  invoices.py
backend/app/schemas/: approval.py  client.py  invoice.py
backend/app/services/: approval_workflow.py  email_sender.py  invoice_calc.py  pdf_generator.py
backend/migrations/: env.py
backend/migrations/versions/: cf484103f0e5_initial_schema.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/pages/: Approvals.tsx  Clients.tsx  Dashboard.tsx  Invoices.tsx
